--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.dropbtn {
+  background-color: #4caf50;
   color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #3e8e41;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#myInput {
+  box-sizing: border-box;
+  background-image: url("./search-icon.png");
+  background-position: 16px 13px;
+  background-size: 21px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  width: 100%;
+}
+
+#myInput:focus {
+  outline: 1px solid #ddd;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: relative;
+  background-color: #f6f6f6;
+  width: 100%;
+  overflow: auto;
+  border: 1px solid #ddd;
+  z-index: 1;
+  max-height: 300px;
+}
+
+.show {
+  display: block;
+}
+.bold {
+  color: rgb(26, 115, 232);
+  font-weight: bold;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ffffff;
+}
+.card {
+  display: block;
+  padding: 5px;
+  border-bottom: 1px solid #8080804d;
+  transition: all 0.3s;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.card.hover {
+  background-color: #d0d0d0;
+}
+.searchArea {
+  width: 300px;
+  position: relative;
+}
+.card p {
+  font-size: 14px;
+  color: #797979;
+  padding: 5px;
+  margin: 0;
+}
+p.topBox {
+  color: #333;
+  font-size: 20px;
+  font-weight: bold;
+}
+.topBox small {
+  font-weight: 100;
+  font-size: 14px;
+  font-style: italic;
+}
+.card span.items {
+  border-top: 1px solid #e4e4e4;
+  border-bottom: 1px solid #e4e4e4;
+  width: 94%;
+  display: block;
+  padding: 5px 5px;
+  font-size: 13px;
+  color: grey;
+}
+.card span.items::before {
+  content: " ";
+  height: 5px;
+  width: 5px;
+  background: rgb(26, 115, 232);
+  float: left;
+  border-radius: 50px;
+  position: relative;
+  top: 6px;
+  margin-right: 5px;
+}
+.reset {
+  position: absolute;
+  top: 13px;
+  right: 10px;
+  font-weight: 100;
+  font-size: 12px;
+  color: #a7a7a7;
+  border-radius: 20px;
+  border: 1px solid #a7a7a7;
+  padding: 1px 5px 2px 5px;
+  cursor: pointer;
 }
